--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "sweetalert": "~1.1.3",
-    "fancy-settings": "~1.1.3"
+    "fancy-settings": "~1.1.3",
+    "bootstrap": "~3.3.7"
   },
   "keywords": [
     "emag",
