--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,7 @@
       "js": [
         "bower_components/jquery/dist/jquery.min.js",
         "bower_components/sweetalert/dist/sweetalert.min.js",
+        "src/backend/api.js",
         "src/content_script/content_script.js"
       ],
       "css": [
