--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "jquery": "~2.1.4",
     "sweetalert": "~1.1.3",
     "fancy-settings": "~1.1.3",
-    "bootstrap": "~3.3.7"
+    "bootstrap": "~3.3.7",
+    "morris.js": "~0.5.1"
   },
   "keywords": [
     "emag",
