add alarm & stub for scanner

--- a/manifest.json
+++ b/manifest.json
@@ -45,6 +45,8 @@
   "permissions": [
     "https://script.google.com/",
     "tabs",
-    "storage"
+    "storage",
+    "alarms",
+    "background"
   ]
 }
