--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "sweetalert": "~1.1.3",
     "fancy-settings": "~1.1.3",
     "bootstrap": "~3.3.7",
-    "morris.js": "~0.5.1"
+    "morris.js": "~0.5.1",
+    "moment": "~2.17.1"
   },
   "keywords": [
     "emag",
