--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "fancy-settings": "~1.1.3",
     "bootstrap": "~3.3.7",
     "morris.js": "~0.5.1",
-    "moment": "~2.17.1"
+    "moment": "~2.17.1",
+    "mustache.js": "~2.3.0"
   },
   "keywords": [
     "emag",
