--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "emag-score-chrome-extension-browser",
   "version": "0.0.1",
-  "description": "eMag price tracker - browser client page",
+  "description": "eMag price tracker",
   "scripts": {
-    "start": "live-server",
     "build": "webpack --watch"
   },
   "keywords": [],
@@ -17,14 +16,19 @@
     "babel-preset-es2015": "^6.18.0",
     "bootstrap": "^3.3.7",
     "co": "^4.6.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.1.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "moment": "^2.17.1",
     "morris.js": "^0.5.0",
     "postcss-loader": "^1.2.2",
     "raphael": "^2.2.7",
+    "sweetalert": "^1.1.3",
     "url-loader": "^0.5.7",
     "vue": "^2.1.10",
     "vue-loader": "^10.0.2",
