--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "co": "^4.6.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.46",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-include-assets-plugin": "0.0.3",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.1.1",
     "less": "^2.7.2",
