--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "bootstrap": "^3.3.7",
+    "bootstrap-toggle": "^2.2.2",
     "co": "^4.6.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
