--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "file-loader": "^0.9.0",
     "html-webpack-include-assets-plugin": "0.0.3",
     "html-webpack-plugin": "^2.28.0",
+    "i18next": "^7.1.1",
     "jquery": "^3.1.1",
+    "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "moment": "^2.17.1",
